--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -40,9 +40,9 @@
     <div class="flex space-x-4">
 
       <!-- いいねボタン -->
-      <button class="flex items-center space-x-1">
-        <%= image_tag 'like.svg', alt: "Like", class: "h-5 w-5" %>
-      </button>
+      <div class="flex items-center space-x-1">
+        <%= render 'likes/like_buttons', post: @post %>
+      </div>
 
       <!-- コメントボタン -->
       <button class="flex items-center space-x-1">
