未ログイン時にいいねボタンを表示しないように変更

--- a/app/views/likes/_like_buttons.html.erb
+++ b/app/views/likes/_like_buttons.html.erb
@@ -1,14 +1,15 @@
 <turbo-frame id="like_buttons_<%= post.id %>">
-  <div class="flex items-center">
-    <% if post.liked_by?(current_user) %>
-      <!-- いいね解除ボタン -->
-      <%= render 'likes/unlike', post: post, like: current_user.likes.find_by(post: post) %>
-    <% else %>
-      <!-- いいね追加ボタン -->
-      <%= render 'likes/like', post: post %>
-    <% end %>
-    
-    <!-- いいね数の表示 -->
-    <span class="ml-1 text-sm text-gray-600"><%= post.likes.count %></span>
-  </div>
+  <% if current_user %>
+    <div class="flex items-center space-x-2">
+      <% if post.liked_by?(current_user) %>
+        <!-- いいね解除ボタン -->
+        <%= render 'likes/unlike', post: post, like: current_user.likes.find_by(post: post) %>
+      <% else %>
+        <!-- いいね追加ボタン -->
+        <%= render 'likes/like', post: post %>
+      <% end %>
+      <!-- いいね数の表示 -->
+      <span class="ml-1 text-sm text-gray-600"><%= post.likes.count %></span>
+    </div>
+  <% end %> <!-- ログインしていない場合は何も表示しない -->
 </turbo-frame>
