--- a/app/views/bookmarks/_bookmark_buttons.html.erb
+++ b/app/views/bookmarks/_bookmark_buttons.html.erb
@@ -1,7 +1,7 @@
 <turbo-frame id="bookmark_buttons_<%= post.id %>">
   <% if current_user %>
     <div class="flex items-center space-x-2">
-      <% if post.bookmarked_by?(current_user) %>
+      <% if current_user && post.bookmarked_by?(current_user) %>
         <!-- ブックマーク解除ボタン -->
         <%= render 'bookmarks/unbookmark', post: post, bookmark: current_user.bookmarks.find_by(post: post) %>
       <% else %>
