ヘッダーにプライバシーポリシーページへのリンクを追加

--- a/app/views/shared/_before_header_login.html.erb
+++ b/app/views/shared/_before_header_login.html.erb
@@ -14,7 +14,7 @@
         <li><%= link_to '新規登録', new_user_registration_path, class: "btn btn-ghost" %></li>
         <hr>
         <li><%= link_to '利用規約', "", class: "btn btn-ghost w-full text-left" %></li>
-        <li><%= link_to 'プライバシーポリシー', "", class: "btn btn-ghost w-full text-left" %></li>
+        <li><%= link_to 'プライバシーポリシー', privacy_policy_path, class: "btn btn-ghost w-full text-left" %></li>
         <li><%= link_to 'お問い合わせ', "https://forms.gle/YMuTma5zqtiNunGaA", class: "btn btn-ghost w-full text-left" %></li>
         <hr>
         <li class="text-center text-xs mt-2">&copy; 2024 RunBreeze</li>
