--- a/app/views/shared/_after_header_login.html.erb
+++ b/app/views/shared/_after_header_login.html.erb
@@ -16,7 +16,7 @@
         <li><%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: "ログアウトしてもよろしいですか？" }, class: "btn btn-ghost w-full text-left" %></li>
         <hr>
         <li><%= link_to '利用規約', "", class: "btn btn-ghost w-full text-left" %></li>
-        <li><%= link_to 'プライバシーポリシー', "", class: "btn btn-ghost w-full text-left" %></li>
+        <li><%= link_to 'プライバシーポリシー', privacy_policy_path, class: "btn btn-ghost w-full text-left" %></li>
         <li><%= link_to 'お問い合わせ', "https://forms.gle/YMuTma5zqtiNunGaA", class: "btn btn-ghost w-full text-left" %></li>
         <hr>
         <li class="text-center text-xs mt-2">&copy; 2024 RunBreeze</li>
