--- a/app/views/shared/_before_header_login.html.erb
+++ b/app/views/shared/_before_header_login.html.erb
@@ -13,7 +13,7 @@
       <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
         <li><%= link_to '新規登録', new_user_registration_path, class: "btn btn-ghost" %></li>
         <hr>
-        <li><%= link_to '利用規約', "", class: "btn btn-ghost w-full text-left" %></li>
+        <li><%= link_to '利用規約', terms_of_service_path, class: "btn btn-ghost w-full text-left" %></li>
         <li><%= link_to 'プライバシーポリシー', privacy_policy_path, class: "btn btn-ghost w-full text-left" %></li>
         <li><%= link_to 'お問い合わせ', "https://forms.gle/YMuTma5zqtiNunGaA", class: "btn btn-ghost w-full text-left" %></li>
         <hr>
