--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,22 +3,22 @@
 <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <div class="form-control mb-4">
     <%= f.label :username, "ユーザー名", class: "label" %>
-    <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "input input-bordered w-full bg-gray-100 focus:bg-white" %>
+    <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "input input-bordered w-full bg-gray-100 focus:bg-white", placeholder: "例: taro" %>
   </div>
 
   <div class="form-control mb-4">
     <%= f.label :email, "メールアドレス", class: "label" %>
-    <%= f.email_field :email, autocomplete: "email", class: "input input-bordered w-full bg-gray-100 focus:bg-white" %>
+    <%= f.email_field :email, autocomplete: "email", class: "input input-bordered w-full bg-gray-100 focus:bg-white", placeholder: "例: taro@example.com" %>
   </div>
 
   <div class="form-control mb-4">
     <%= f.label :password, "パスワード", class: "label" %>
-    <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered w-full bg-gray-100 focus:bg-white" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered w-full bg-gray-100 focus:bg-white", placeholder: "4文字以上のパスワードを入力してください" %>
   </div>
 
   <div class="form-control mb-6">
     <%= f.label :password_confirmation, "パスワード確認", class: "label" %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered w-full bg-gray-100 focus:bg-white" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered w-full bg-gray-100 focus:bg-white", placeholder: "新しいパスワードをもう一度入力してください" %>
   </div>
 
   <div class="form-control">
