--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,3 @@
-<!-- app/views/devise/registrations/new.html.erb -->
-
 <div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8">
     <!-- 新規登録タイトル -->
@@ -10,7 +8,7 @@
     </div>
 
     <!-- エラーメッセージの表示 -->
-    <%= devise_error_messages! %>
+    <%= render "shared/error_messages", resource: resource %>
 
     <!-- 新規登録フォーム -->
     <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name), local: true) do |f| %>
@@ -60,9 +58,9 @@
 
     <!-- Googleアカウントで新規登録ボタン -->
     <div class="oauth-buttons mt-4 flex justify-center">
-    <%= button_to user_google_oauth2_omniauth_authorize_path, data: { turbo: false }, class: "btn btn-primary w-full flex items-center justify-center" do %>
-      <span class="text-gray-100 font-semibold">Googleでログイン</span>
-    <% end %> 
+      <%= button_to user_google_oauth2_omniauth_authorize_path, data: { turbo: false }, class: "btn btn-primary w-full flex items-center justify-center" do %>
+        <span class="text-gray-100 font-semibold">Googleでログイン</span>
+      <% end %> 
     </div>
   </div>
 </div>
